@@ -1,3 +1,11 @@
+2004-10-14  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* Bug#276246: w3m's locale parsing should at least see '@euro' modifier
+	* config.h (HAVE_LANGINFO_CODESET): added
+	* configure.in (AM_LANGINFO_CODESET): added
+	* libwc/charset.c: #include <langinfo.h>
+	       (wc_charset_to_ces): use nl_langinfo(CODESET)
+
 2004-09-30  Hiroyuki Ito <ZXB01226@nifty.com>
 
 	* [w3m-dev 04108] PIPE_BUF
